feature(documentation): Swagger Creating the swagger file Update of npm Update the server Update the post controller
